Modals no longer shift entire website when opening.

--- a/css/VirtualPantry.css
+++ b/css/VirtualPantry.css
@@ -4963,7 +4963,7 @@ button.close {
 body.modal-open,
 .modal-open .navbar-fixed-top,
 .modal-open .navbar-fixed-bottom {
-  margin-right: 15px;
+  margin: 0px;
 }
 .modal {
   display: none;
